criado seleção de personagem
-

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    
     <div class="positBox">
         <div class="arcadeBox">
             <div class="nomeJogo">
@@ -25,7 +24,7 @@
             </div>
             <div class="creditos">
                 <div id="coin" class="wrapper" onclick="audio.play()">
-                    <a href="javascript:setTimeout(()=>{window.location.href = './fases/index.html' },300);">
+                    <a href="javascript:setTimeout(()=>{window.location.href = './chosechat.html' },300);">
                         <div class="gizmo">
                             <div class="led one on"></div>
                             <div class="slot"></div>
