atualização do dia
seleção de char criada

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detona!</title>
-    <link rel="stylesheet" href="./css/coin.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./style/coin.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </div>
             <div class="creditos">
                 <div id="coin" class="wrapper" onclick="audio.play()">
-                    <a href="javascript:setTimeout(()=>{window.location.href = './chosechat.html' },300);">
+                    <a href="javascript:setTimeout(()=>{window.location.href = './choseChar.html' },300);">
                         <div class="gizmo">
                             <div class="led one on"></div>
                             <div class="slot"></div>
@@ -33,7 +33,7 @@
                     </a>
                 </div>
                 <div class="placa">
-                    <p class="pCred">Desenvolvido por<br>Igor Santos</p>
+                    <p class="pCred">Desenvolvido por<br><a href=""><strong>Igor Santos</strong></a></p>
                 </div>
             </div>
         </div>
