--- a/chosechar.html
+++ b/chosechar.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecione o seu personagem!</title>
+    <link rel="stylesheet" href="./style/choseChar.css">
 </head>
+
 <body>
-    
+    <div class="caixa">
+        <div class="arcadeBox">
+            <div class="nomeJogo">
+                <h1>t<spam class="apaga">es</spam>t</h1>
+            </div>
+            <div class="personagens">
+                <h2>Selecione o seu personagem!</h2>
+                <div class="personagem">
+                    <div class="persona1">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla accusamus molestias harum corrupti tenetur ratione nam, ducimus atque sint animi, ullam, placeat commodi vero. Esse quidem earum maiores odit?</p>
+                    </div>
+                    <div class="persona2">
+                    </div>
+                    <div class="persona3">
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img src="imagens/controle.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
