alterações na pagina um e dois
seleção de personagem e algumas tentativas de import e export falhas.

--- a/chosechar.html
+++ b/chosechar.html
@@ -16,14 +16,21 @@
                 <h1>t<spam class="apaga">es</spam>t</h1>
             </div>
             <div class="personagens">
-                <h2>Selecione o seu personagem!</h2>
+                <h2><spam id="userName">Usuario</spam> selecione o seu personagem!</h2>
                 <div class="personagem">
-                    <div class="persona1">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nulla accusamus molestias harum corrupti tenetur ratione nam, ducimus atque sint animi, ullam, placeat commodi vero. Esse quidem earum maiores odit?</p>
-                    </div>
+                    <a href="1">
+                        <div class="persona1">
+                            <img src="./imagens/ralphgif.webp" width="200px" height="200px" alt="">
+                            <h3>Este é Ralph e ele está muito triste por não ter uma medalha de heroi e não ser convidado para o aniversario de 30 anos do seu jogo, porem com todas as suas forças ele tentará provar que é possivel um vilão se tornar um Heroi!</h3>
+                        </div>
+                    </a>
                     <div class="persona2">
+                        <img src="./imagens/felix-gif.gif" alt="">
+                        <h3>Este é Felix Jr e sem seu amigo Ralph o seu jogo está com os dias contados, para consertar isso Felix parte em busca de encontrar seu amigo.</h3>
                     </div>
                     <div class="persona3">
+                        <img src="./imagens/usuario.gif" alt="">
+                        <h3>Olá, <spam id="userName1">Usuario</spam> você tambem pode fazer parte dessa historia e ser um heroi detonando tudo que encontrar pelo caminho! Vamos embarcar nessa jornada?</h3>
                     </div>
                 </div>
             </div>
@@ -32,6 +39,8 @@
             </div>
         </div>
     </div>
+    <!-- <script src="./script/usuarioData.js"></script> -->
+    <script type="module" src="scriptteste.js"></script>
 </body>
 
 </html>
