--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
     </div>
     <script src="script/coin.js"></script>
+    <script src="./script/usuarioDataRec.js"></script>
 </body>
 
 </html>
