--- a/chosechar.html
+++ b/chosechar.html
@@ -13,17 +13,16 @@
     <div class="caixa">
         <div class="arcadeBox">
             <div class="nomeJogo">
-                <h1>t<spam class="apaga">es</spam>t</h1>
+                <h1>De<span class="apaga">ton</span>a<span class="apaga">!</span></h1>
             </div>
             <div class="personagens">
                 <h2><spam id="userName">Usuario</spam> selecione o seu personagem!</h2>
                 <div class="personagem">
-                    <a href="1">
-                        <div class="persona1">
+                    <button onclick="selecioneRalph()">teste</button>
+                        <div class="persona1" onclick="selecioneRalph()">
                             <img src="./imagens/ralphgif.webp" width="200px" height="200px" alt="">
                             <h3>Este é Ralph e ele está muito triste por não ter uma medalha de heroi e não ser convidado para o aniversario de 30 anos do seu jogo, porem com todas as suas forças ele tentará provar que é possivel um vilão se tornar um Heroi!</h3>
                         </div>
-                    </a>
                     <div class="persona2">
                         <img src="./imagens/felix-gif.gif" alt="">
                         <h3>Este é Felix Jr e sem seu amigo Ralph o seu jogo está com os dias contados, para consertar isso Felix parte em busca de encontrar seu amigo.</h3>
@@ -34,13 +33,13 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <img src="imagens/controle.jpg" alt="">
+            <div class="controle-wide">
+                <img src="./imagens/controle-wide.jpg" alt="">
             </div>
         </div>
     </div>
-    <!-- <script src="./script/usuarioData.js"></script> -->
-    <script type="module" src="scriptteste.js"></script>
+    <script src="./script/usuarioData.js"></script>
+    <script src="./script/selecionePersonagem.js"></script>
 </body>
 
 </html>
