--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <img src="./imagens/controle.jpg" alt="">
             </div>
             <div class="creditos">
-                <div id="coin" class="wrapper" onclick="audio.play()">
-                    <a href="javascript:setTimeout(()=>{window.location.href = './choseChar.html' },300);">
+                <div id="coin" class="wrapper" onclick="play();pegarNomeUsuario();verificarIdade();">
                         <div class="gizmo">
                             <div class="led one on"></div>
                             <div class="slot"></div>
