--- a/personagens/escopo.html
+++ b/personagens/escopo.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style/arcadeBox.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
-            <div class="letreiro"> 
+            <div class="letreiro">
                 <h1>De<span class="apaga">ton</span>a<span class="apaga">!</span></h1>
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur veritatis laboriosam obcaecati quasi deserunt eligendi, dolorem iste ad repudiandae repellendus maiores debitis ex cum vitae commodi, corporis tempore magni in. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus natus delectus aspernatur eius vitae molestiae expedita pariatur sit ipsa accusamus quidem dolorum quos exercitationem tempore eaque, laudantium, quis tempora autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, nemo iste aperiam inventore reprehenderit repudiandae. Saepe ab cum fugit ullam itaque odio et reprehenderit facilis ex esse, inventore maxime assumenda?</h2>
+                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur veritatis laboriosam
+                        obcaecati quasi deserunt eligendi, dolorem iste ad repudiandae repellendus maiores debitis ex
+                        cum vitae commodi, corporis tempore magni in. Lorem ipsum dolor sit amet consectetur,
+                        adipisicing elit. Doloribus natus delectus aspernatur eius vitae molestiae expedita pariatur sit
+                        ipsa accusamus quidem dolorum quos exercitationem tempore eaque, laudantium, quis tempora autem.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, nemo iste aperiam inventore
+                        reprehenderit repudiandae. Saepe ab cum fugit ullam itaque odio et reprehenderit facilis ex
+                        esse, inventore maxime assumenda?</h2>
                 </div>
                 <div>botao</div>
             </div>
         </div>
-        <div>controle</div>
+        <div class="controlImg">
+            <img src="../imagens/controle1.jpg" alt="" class="controL">
+            <img src="../imagens/controle2.jpg" alt="" class="controL">
+        </div>
     </div>
 </body>
+
 </html>
