--- a/personagens/escopo.html
+++ b/personagens/escopo.html
@@ -27,7 +27,7 @@
                         reprehenderit repudiandae. Saepe ab cum fugit ullam itaque odio et reprehenderit facilis ex
                         esse, inventore maxime assumenda?</h2>
                 </div>
-                <div>botao</div>
+                <div class="btn">botao</div>
             </div>
         </div>
         <div class="controlImg">
