--- a/personagens/choseChar.html
+++ b/personagens/choseChar.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecione o seu personagem!</title>
-    <link rel="stylesheet" href="./style/choseChar.css">
+    <link rel="stylesheet" href="../style/choseChar.css">
 </head>
 
 <body>
