--- a/personagens/choseChar.html
+++ b/personagens/choseChar.html
@@ -19,26 +19,26 @@
                 <h2><spam id="userName">Usuario</spam> selecione o seu personagem!</h2>
                 <div class="personagem">
                         <div class="persona1" onclick="selecioneRalph()">
-                            <img src="./imagens/ralphgif.webp" width="200px" height="200px" alt="">
+                            <img src="../imagens/ralphgif.webp" width="200px" height="200px" alt="">
                             <h3>Este é Ralph e ele está muito triste por não ter uma medalha de heroi e não ser convidado para o aniversario de 30 anos do seu jogo, porem com todas as suas forças ele tentará provar que é possivel um vilão se tornar um Heroi!</h3>
                         </div>
                     <div class="persona2" onclick="selecioneFelix()">
-                        <img src="./imagens/felix-gif.gif" alt="">
+                        <img src="../imagens/felix-gif.gif" alt="">
                         <h3>Este é Felix Jr e sem seu amigo Ralph o seu jogo está com os dias contados, para consertar isso Felix parte em busca de encontrar seu amigo.</h3>
                     </div>
                     <div class="persona3" onclick="selecioneUsuario()">
-                        <img src="./imagens/usuario.gif" alt="">
+                        <img src="../imagens/usuario.gif" alt="">
                         <h3>Olá, <spam id="userName1">Usuario</spam> você tambem pode fazer parte dessa historia e ser um heroi detonando tudo que encontrar pelo caminho! Vamos embarcar nessa jornada?</h3>
                     </div>
                 </div>
             </div>
             <div class="controle-wide">
-                <img src="./imagens/controle-wide.jpg" alt="">
+                <img src="../imagens/controle-wide.jpg" alt="">
             </div>
         </div>
     </div>
-    <script src="./script/usuarioData.js"></script>
-    <script src="./script/selecionePersonagem.js"></script>
+    <script src="../script/usuarioData.js"></script>
+    <script src="../script/selecionePersonagem.js"></script>
 </body>
 
 </html>
