--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Detona!</title>
     <link rel="stylesheet" href="./style/coin.css">
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="shortcut icon" href="imagens/favicon/indexfavicon.ico" type="image/x-icon">
 </head>
 
 <body>
