--- a/personagens/felix/29800.html
+++ b/personagens/felix/29800.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ela é tão linda</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="positBox">
@@ -15,7 +16,7 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Ao chegar no jogo Missão de Herói Felix encontra o que ele descreve como a coisa com os graficos mais bonitos que ele já viu chamada de Sargento Calhoun, mas sem perder o foco ele vê que pela detonação do local Ralph havia passado por ali e a Sargento está indo atras dele, porque acidentalmente ele levou um <abbr title="Inseto eletronico, meio obvio, não?">Insetronico</abbr></h2>
+                    <h2>Ao chegar no jogo Missão de Herói Felix encontra o que ele descreve como a coisa com os graficos mais bonitos que ele já viu chamada de Sargento Calhoun, mas sem perder o foco ele vê que pela detonação do local Ralph havia passado por ali e a Sargento está indo atras dele, porque acidentalmente ele levou um <abbr title="Inseto eletronico, meio obvio, não?">insetronico</abbr> que se não for destruido por devorar todo o jogo.</h2>
                 </div>
                 <div class="btn" onclick="">Estamos perto!</div>
             </div>
