--- a/personagens/choseChar.html
+++ b/personagens/choseChar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecione o seu personagem!</title>
     <link rel="stylesheet" href="../style/choseChar.css">
+    <link rel="shortcut icon" href="../imagens/favicon/indexfavicon.ico" type="image/x-icon">
 </head>
 
 <body>
