--- a/personagens/felix/14577.html
+++ b/personagens/felix/14577.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where's Ralph?</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="positBox">
