--- a/personagens/ralph/34927.html
+++ b/personagens/ralph/34927.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essa pestinha</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="shortcut icon" href="../../imagens/favicon/ralphfavicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="positBox">
