++funcao next level
funcao next level incrementada e funcionando

--- a/personagens/felix/14577.html
+++ b/personagens/felix/14577.html
@@ -18,7 +18,7 @@
                 <div class="texto">
                     <h2>Depois de uma discussão Ralph sai dizendo que consiguira uma medalha e provará o seu valor e que pode ser um héroi. Porem o dia passa e Ralph não retorna, Felix Jr então sai em busca do seu amigo. Ao chegar na central Felix Jr vê alguns jogos ao qual Ralph poderia participar mas sabendo que Ralph por mais que seja forte não gosta de brigas e ele é muito devagar.<br>Que jogo esse miolo mole deve ter ido para conseguir uma medalha de héroi?</h2>
                 </div>
-                <div class="btn" onclick="">Onde está o Ralph?</div>
+                <div class="btn" onclick="validarResposta('Para onde Ralph deverá ir?\na- Pac-man', 'c', 'a', 'b', 'Ralph segue em direção a Missão de Heroi!', 'Ralph entrou no Pac-Man e por pouco ele não consegue fugir do fantasma ele acaba correndo para saida e vê que esse jogo não é pra ele', 'Serio? ninguem consegue correr mais que aquele bicho azul')">Onde está o Ralph?</div>
             </div>
         </div>
         <div class="controlImg">
@@ -26,5 +26,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/fases.js"></script>
 </body>
 </html>
