--- a/personagens/ralph/14098.html
+++ b/personagens/ralph/14098.html
@@ -18,7 +18,7 @@
                 <div class="texto">
                     <h2>Após não ser convidado para o aniversario de 30 anos do jogo que Ralph trabalha ele decide ir atrás de sua medalha de heroi para provar o seu valor. Ao chegar na estação central ele se depara com 3 jogos que pode competir para tentar ganhar uma medalha. mas lembre-se a maior vantagem de Ralph é sua força bruta.</h2>
                 </div>
-                <div class="btn" onclick="">Vamos lá!</div>
+                <div class="btn" onclick="validarResposta('Para onde Ralph deverá ir?\nA - Pac-man\nB - Sonic\nC - Misão de Heroi', 'c', 'a', 'b', 'Ralph segue com bravura em direção a Missão de Heroi!', 'Ralph entrou no Pac-Man e por pouco ele não consegue fugir do fantasma, ele acaba correndo para saida e vê que esse jogo não é pra ele.', 'Serio? ninguem consegue correr mais que aquele porco-espinho azul.', './24693.html')">Vamos lá!</div>
             </div>
         </div>
         <div class="controlImg">
@@ -26,5 +26,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/fases.js"></script>
 </body>
 </html>
