--- a/personagens/ralph/24693.html
+++ b/personagens/ralph/24693.html
@@ -18,7 +18,7 @@
                 <div class="texto">
                     <h2>Ralph consegue sua medalha de heroi, após apanhar de varios insetos mutantes mas com a ajuda de outros personagens do jogo Misão de Heroi Ralph consegue subir a torre e conseguir a sua medalha. <br> Pórem ao fazer isso Ralph acidentalmente desperta um enchame de novos insetos e agora ele está sozinho.</h2>
                 </div>
-                <div class="btn" onclick="">O que fazer? :O</div>
+                <div class="btn" onclick="validarResposta('O que Ralph deverá fazer agora?\nA - Lutar contra os insetos\nB - Fugir usando uma nave de escape\nC - Fugir correndo', 'b', 'a', 'c', 'Ralph entra na nave e começa a apertar o maximo de botões que consegue ver!', 'Ralph tenta com seus punhos afastar o maximo de insetos mutantes, porem ele não é forte o suficiente.', 'Com suas pernas desproporcionais ao seu corpo Ralph não é muito veloz e não chega muito longe até que seja rodeado por insetos.', './34927.html')">O que fazer? :O</div>
             </div>
         </div>
         <div class="controlImg">
@@ -26,5 +26,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/fases.js"></script>
 </body>
 </html>
