--- a/personagens/ralph/34927.html
+++ b/personagens/ralph/34927.html
@@ -19,7 +19,7 @@
                     <h2>Ralph entra na nave e sem saber controlar ele acaba entrando em um jogo diferente, ao chegar Ralph nota que não encontra sua medalha, após olhar ao redor ele a encontra presa em uma arvore, ao se aproximar da arvore Ralph vê que ha uma menina com a sua medalha, seu nome é <strong>Vanellope Von Schweetz</strong>, então Ralph diz:</h2>
                     <p>Ralph: Ei sua pestinha, me dê essa medalha ela é minha eu ganhei ela no jogo missão de heroi<br>Vanellope cai em gargalhadas e diz: Mijão de heroi? que jogo bobo é esse? e completa<br> Vanellope: É o seguinte grandalhão, achado não é roubado, e eu vou usar essa medalha para poder participar da corrida e provar que eu posso ser uma corredora e então ela corre com a sua medalha.</p>
                 </div>
-                <div class="btn" onclick="">Essa pestinha >:(</div>
+                <div class="btn" onclick="validarResposta('Vendo Vanellope se destanciar Ralph precisa fazer algo!\nA - Perseguir Vanellope.\nB - Desistir e ir de volta para casa.\nC - Ajudar Vanellope a ganhar a corrida.', 'c', 'a', 'b', 'Ralph grita para a baixinha catarrenta que pode ajudar ela a ganhar a corrida.', 'Ao tentar correr para alcançar Vanellope Ralph fica preso no achocolatado.\nRalph odeia chocolate!', 'Desistir não é o que um Heroi faz e Ralph sabe disso.', './49657.html')">Essa pestinha >:(</div>
             </div>
         </div>
         <div class="controlImg">
@@ -27,5 +27,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/fases.js"></script>
 </body>
 </html>
