--- a/personagens/felix/49975.html
+++ b/personagens/felix/49975.html
@@ -18,7 +18,7 @@
                 <div class="texto">
                     <h2>Após Felix Jr consertar o veiculo de Vanelope ela parte em direção a corrida, Ralph vai assitir a corrida para apoiar sua amiga enquanto a Sargento Calhoun quer seguir a sua busca pelo insetronico perdido.</h2>
                 </div>
-                <div class="btn" onclick="">Qual direção?</div>
+                <div class="btn" onclick="validarResposta('Agora Felix Jr se vê dividido, qual decisão ele deve tomar?\nA - Seguir com a Sargento Calhoun\nB - Assistir a corrida com Ralph\nC - Convidar a Sargento Calhoun para assistir a corrida juntos', 'c', 'a', 'b', 'Você convida a Sargento Calhoun para assitir a corrida e ela aceita com um estranho sorriso no rosto, algo que Felix Jr não tinha visto até então, final feliz?', 'Você não pode abandonar o seu amigo em um momento tão especial para ele.', 'Como heroi você não pode deixar que a Sargento Calhoun siga sozinha nesse caminho.', './53377.html')">Qual direção?</div>
             </div>
         </div>
         <div class="controlImg">
@@ -26,5 +26,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/fases.js"></script>
 </body>
 </html>
