--- a/personagens/user/18714.html
+++ b/personagens/user/18714.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../../imagens/favicon/userfavicon.ico" type="image/x-icon">
 </head>
 
@@ -19,10 +18,11 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2><span>Usuario</span> chega em corrida doce e recebe uma mensagem de um holograma de Vannellope, pedindo sua ajuda pois está presa na masmoriso, o Rei doce a prendeu lá e ela lhe escolhei para representar ela na corrida, basta você ganhar para que ela seja libertada.</h2>
+                    <h2><span id="userName">Usuario</span> chega em corrida doce e recebe uma mensagem de um holograma de Vannellope, pedindo sua ajuda pois está presa na masmoriso, o Rei doce a prendeu lá e ela lhe escolhei para representar ela na corrida, basta você ganhar para que ela seja libertada.</h2>
                     <h3>Quando a mensagem termina o Rei doce e seus capangas se aproximam para tentar lhe prender para que você não possa correr.</h3>
+                    <span id="userName1"></span>
                 </div>
-                <div class="btn" onclick="">E agora?</div>
+                <div class="btn" onclick="fase1()">E agora?</div>
             </div>
         </div>
         <div class="controlImg">
@@ -30,6 +30,8 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/user.js"></script>
+    <script src="../../script/usuarioData.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
