--- a/personagens/user/18714.html
+++ b/personagens/user/18714.html
@@ -22,7 +22,7 @@
                     <h3>Quando a mensagem termina o Rei doce e seus capangas se aproximam para tentar lhe prender para que você não possa correr.</h3>
                     <span id="userName1"></span>
                 </div>
-                <div class="btn" onclick="fase1()">E agora?</div>
+                <div class="btn" onclick="fase1('./29741.html')">E agora?</div>
             </div>
         </div>
         <div class="controlImg">
