--- a/personagens/user/29741.html
+++ b/personagens/user/29741.html
@@ -21,7 +21,7 @@
                 <div class="texto">
                     <h2>Após se afastar de todos você encontra uma fabrica de carros proximo, você passa pelo segurança que está dormindo e consegue entrar na fabrica para montar o seu carro.</h2>
                 </div>
-                <div class="btn" onclick="">Fabrica de carros</div>
+                <div class="btn" onclick="nextPag('./34714.html')">Fabrica de carros</div>
             </div>
         </div>
         <div class="controlImg">
@@ -29,6 +29,7 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/user.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
