--- a/personagens/user/34714.html
+++ b/personagens/user/34714.html
@@ -21,7 +21,7 @@
                 <div class="texto">
                     <h2>Aqui não há respostas certas ou erradas, basta você escolher o seu carro!</h2>
                 </div>
-                <div class="btn" onclick="">botao</div>
+                <div class="btn" onclick="escolherCarro('./47771.html')">botao</div>
             </div>
         </div>
         <div class="controlImg">
@@ -29,6 +29,7 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/user.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
