--- a/personagens/user/47771.html
+++ b/personagens/user/47771.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../../imagens/favicon/userfavicon.ico" type="image/x-icon">
 </head>
 
@@ -19,10 +18,10 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Linda caranga que nós temos aqui <span>Usuario</span></h2>
-                    <h3>No horizonte vemos o Rei doce se aproximar com seus capangas em seus veiculos, precisamos sair daqui o mais rapido possivel. há 3 caminhos possiveis.</h3>
+                    <h2>Linda caranga que nós temos aqui <span id="userName">Usuario</span></h2>
+                    <h3><span id="userName1">Usuario</span> no horizonte vemos o Rei doce se aproximar com seus capangas em seus veiculos, precisamos sair daqui o mais rapido possivel. há 3 caminhos possiveis.</h3>
                 </div>
-                <div class="btn" onclick="">Correr!</div>
+                <div class="btn" onclick="correr()">Correr!</div>
             </div>
         </div>
         <div class="controlImg">
@@ -30,6 +29,8 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/usuarioData.js"></script>
+    <script src="../../script/user.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
