acredito que aprendi funções
tudo está funcionando como esperado.

--- a/personagens/user/47771.html
+++ b/personagens/user/47771.html
@@ -21,7 +21,7 @@
                     <h2>Linda caranga que nós temos aqui <span id="userName">Usuario</span></h2>
                     <h3><span id="userName1">Usuario</span> no horizonte vemos o Rei doce se aproximar com seus capangas em seus veiculos, precisamos sair daqui o mais rapido possivel. há 3 caminhos possiveis.</h3>
                 </div>
-                <div class="btn" onclick="correr()">Correr!</div>
+                <div class="btn" onclick="correr('./57774.html',1)">Correr!</div>
             </div>
         </div>
         <div class="controlImg">
