--- a/personagens/user/57774.html
+++ b/personagens/user/57774.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../../imagens/favicon/userfavicon.ico" type="image/x-icon">
 </head>
 
@@ -19,11 +18,11 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2><span>Usuario</span> você é fera nas pistas!</h2>
-                    <h3>Chegamos a pista de corrida e agora basta você escolher qual pista você quer correr para vencer o Rei doce e libertar Vanellope.</h3>
+                    <h2><span id="userName">Usuario</span> você é fera nas pistas!</h2>
+                    <h3>Chegamos a pista de corrida e agora basta você escolher qual pista você quer correr para vencer o Rei doce e libertar Vanellope. <br> <span id="userName1">Usuario</span> você está pronto?</h3>
                     
                 </div>
-                <div class="btn" onclick="">Escolher</div>
+                <div class="btn" onclick="correr('./67443.html',2)">Escolher</div>
             </div>
         </div>
         <div class="controlImg">
@@ -31,6 +30,8 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/usuarioData.js"></script>
+    <script src="../../script/user.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
