--- a/personagens/user/57774.html
+++ b/personagens/user/57774.html
@@ -19,7 +19,7 @@
             <div class="tela">
                 <div class="texto">
                     <h2><span id="userName">Usuario</span> você é fera nas pistas!</h2>
-                    <h3>Chegamos a pista de corrida e agora basta você escolher qual pista você quer correr para vencer o Rei doce e libertar Vanellope. <br> <span id="userName1">Usuario</span> você está pronto?</h3>
+                    <h3>Chegamos a pista de corrida e agora basta você escolher qual pista você quer correr para vencer o Rei doce e libertar Vanellope. <br>Você está pronto?</h3>
                     
                 </div>
                 <div class="btn" onclick="correr('./67443.html',2)">Escolher</div>
