--- a/personagens/user/67443.html
+++ b/personagens/user/67443.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../../imagens/favicon/userfavicon.ico" type="image/x-icon">
 </head>
 
@@ -19,7 +18,7 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2><span>Usuario</span> Parabens!</h2>
+                    <h2><span id="userName">Usuario</span> Parabens!</h2>
                     <h3>Você correu como o vento e conseguiu salvar Vanellope ela nunca desconfiou do seu potencial!</h3>
                     
                 </div>
@@ -31,6 +30,8 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/usuarioData.js"></script>
+    <script src="../../script/user.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
