--- a/personagens/felix/53377.html
+++ b/personagens/felix/53377.html
@@ -19,7 +19,7 @@
                     <h2>No meio da corrida aparece o insetronico e Felix, Ralph e a Sargento Calhoun fazem um otimo trabalho em equipe para conter o ataque desse insetronico, enquanto Ralph defende as pessoas e a Sargento Calhoun luta com o insetronico Felix Jr conserta tudo que é destruido nesse processo.<br>Por fim graças ao trabalho em equipe tudo ocorre bem e Vanelope consegue atravesar a linha de chegada!</h2>
                     <p>"Eu sou parte de uma equipe. Então, quando venço, não sou eu apenas quem vence. De certa forma, Termino o trabalho de um grupo enorme de pessoas" - Ayrton Senna</p>
                 </div>
-                <div class="btn" onclick="">Fim de Jogo</div>
+                <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
             </div>
         </div>
         <div class="controlImg">
@@ -27,5 +27,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/nexpag.js"></script>
 </body>
 </html>
