--- a/personagens/ralph/49657.html
+++ b/personagens/ralph/49657.html
@@ -19,7 +19,7 @@
                     <h2>Você se provou um verdadeiro Héroi, ajudando Vanellope a vencer a corrida e recebe dela uma medalha escrito:"Você é meu heroi!" Parabens! <br>Você Detonou!</h2>
                     <p>Ajudar o próximo é ajudar você mesmo a ser uma pessoa melhor!</p>
                 </div>
-                <div class="btn" onclick="">Fim de Jogo</div>
+                <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
             </div>
         </div>
         <div class="controlImg">
@@ -27,5 +27,6 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/nexpag.js"></script>
 </body>
 </html>
