--- a/personagens/user/67443.html
+++ b/personagens/user/67443.html
@@ -20,9 +20,9 @@
                 <div class="texto">
                     <h2><span id="userName">Usuario</span> Parabens!</h2>
                     <h3>Você correu como o vento e conseguiu salvar Vanellope ela nunca desconfiou do seu potencial!</h3>
-                    
+                    <p><span id="userName1"></span></p>
                 </div>
-                <div class="btn" onclick="">Fim de Jogo</div>
+                <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
             </div>
         </div>
         <div class="controlImg">
@@ -30,6 +30,7 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../../script/nexpag.js"></script>
     <script src="../../script/usuarioData.js"></script>
     <script src="../../script/user.js"></script>
     <script src="../../script/fases.js"></script>
