alterações de texto
++

--- a/personagens/creditos.html
+++ b/personagens/creditos.html
@@ -32,10 +32,10 @@
             <div class="transparent">|</div>
             <div>Igor Santos</div>
             <div class="transparent">|</div>
-            <div>Erika</div>
-            <div>Jiulie</div>
-            <div>Beatriz</div>
-            <div>Joca</div>
+            <div>Erika Rodrigues</div>
+            <div>Jiulie Vitoria</div>
+            <div>Beatriz Mioranza</div>
+            <div>João Pedro</div>
             <div class="transparent">|</div>
             <div>Inara Almeida, Bruna</div>
             <div>Henryque Lucena, Everton Seixas</div>
