--- a/personagens/felix/14577.html
+++ b/personagens/felix/14577.html
@@ -17,9 +17,9 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Depois de uma discussão Ralph sai dizendo que consiguira uma medalha e provará o seu valor e que pode ser um héroi. Porem o dia passa e Ralph não retorna, Felix Jr então sai em busca do seu amigo. Ao chegar na central Felix Jr vê alguns jogos ao qual Ralph poderia participar mas sabendo que Ralph por mais que seja forte não gosta de brigas e ele é muito devagar.<br>Que jogo esse miolo mole deve ter ido para conseguir uma medalha de héroi?</h2>
+                    <h2>Depois de uma discussão Ralph sai dizendo que consiguira uma medalha e provará o seu valor e que pode ser um héroi. Porem o dia passa e Ralph não retorna, Felix Jr então sai em busca do seu amigo. Ao chegar na central Felix Jr vê alguns jogos ao qual Ralph poderia participar mas sabendo que Ralph por mais que seja forte não gosta de brigas e ele é muito devagar.<br>Que jogo esse miolo mole deve ter ido para conseguir uma medalha de herói?</h2>
                 </div>
-                <div class="btn" onclick="validarResposta('Onde está o Ralph?\nA - Pac-Man \nB - Street Figther \nC - Missão de Heroi', 'c', 'a', 'b', 'Alguem na entrada do jogo diz que realmente um grandalhão passou por aqui.', 'Um fantasma diz que um grandalhão tentou entrar no jogo mas saiu asssustado depois que viu um fantasma', 'Por mais que Ralph tenha punhos enormes Felix Jr sabe que Ralph não é de briga.', './29800.html')">Onde está o Ralph?</div>
+                <div class="btn" onclick="validarResposta('Onde está o Ralph?\nA - Pac-Man \nB - Street Figther \nC - Missão de Herói', 'c', 'a', 'b', 'Alguem na entrada do jogo diz que realmente um grandalhão passou por aqui.', 'Um fantasma diz que um grandalhão tentou entrar no jogo mas saiu asssustado depois que viu um fantasma', 'Por mais que Ralph tenha punhos enormes Felix Jr sabe que Ralph não é de briga.', './29800.html')">Onde está o Ralph?</div>
             </div>
         </div>
         <div class="controlImg">
