+alterações de texto
feitos

--- a/personagens/user/29741.html
+++ b/personagens/user/29741.html
@@ -18,9 +18,9 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Após se afastar de todos você encontra uma fabrica de carros proximo, você passa pelo segurança que está dormindo e consegue entrar na fabrica para montar o seu carro.</h2>
+                    <h2>Após se afastar de todos você encontra uma fábrica de carros próximo, você passa pelo segurança que está dormindo e consegue entrar na fábrica para montar o seu carro.</h2>
                 </div>
-                <div class="btn" onclick="nextPag('./34714.html')">Fabrica de carros</div>
+                <div class="btn" onclick="nextPag('./34714.html')">Fábrica de carros</div>
             </div>
         </div>
         <div class="controlImg">
