--- a/personagens/user/34714.html
+++ b/personagens/user/34714.html
@@ -20,7 +20,7 @@
                 <div class="texto">
                     <h2>Aqui não há respostas certas ou erradas, basta você escolher o seu carro!</h2>
                 </div>
-                <div class="btn" onclick="escolherCarro('./47771.html')">botao</div>
+                <div class="btn" onclick="escolherCarro('./47771.html')">Escolher</div>
             </div>
         </div>
         <div class="controlImg">
