--- a/personagens/felix/39471.html
+++ b/personagens/felix/39471.html
@@ -16,7 +16,7 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Felix Jr e Sargento Calhoun chegam a corrida doce e após passarem por varios desafios e encontram Ralph e Vanelope, Ralph conta que Vanellope precisa ganhar a corrida porem seu carro está em migalhas, totalmente destruido e inutilizavel, e já não há mais tempo para eles consertarem.</h2>
+                    <h2>Felix Jr e Sargento Calhoun chegam a corrida doce e após passarem por vários desafios e encontram Ralph e Vanelope, Ralph conta que Vanellope precisa ganhar a corrida porém seu carro está em migalhas, totalmente destruído e inutilizável, e já não há mais tempo para eles consertarem.</h2>
                 </div>
                 <div class="btn" onclick="validarResposta('O que Felix Jr deve fazer?\nA - Ajudar seu amigo Ralph e consertar o carro de Vanelope.\nB - Tentar convercer Ralph a voltar para o seu jogo pois ele é necessario lá.\nC - Não fazer nada.', 'a', 'b', 'c', 'Felix Jr usa o seu martelo e em segundos conserta o carro de Vanellope para que ela possa participar da corrida', 'Ralph se nega a retornar sem ajudar a sua amiga a vencer a corrida.', 'Essa não é a ação que um heroi faz.', './49975.html')">E agora?</div>
             </div>
