--- a/personagens/ralph/49657.html
+++ b/personagens/ralph/49657.html
@@ -16,7 +16,7 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Você se provou um verdadeiro Héroi, ajudando Vanellope a vencer a corrida e recebe dela uma medalha escrito:"Você é meu heroi!" Parabens! <br>Você Detonou!</h2>
+                    <h2>Você se provou um verdadeiro Herói, ajudando Vanellope a vencer a corrida e recebe dela uma medalha escrito:"Você é meu herói!" Parabéns!<br>Você Detonou!</h2>
                     <p>Ajudar o próximo é ajudar você mesmo a ser uma pessoa melhor!</p>
                 </div>
                 <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
