--- a/personagens/user/57774.html
+++ b/personagens/user/57774.html
@@ -30,8 +30,7 @@
             <img src="../../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
-    <script src="../../script/usuarioData.js"></script>
+    <script src="../../script/usuarioData1.js"></script>
     <script src="../../script/user.js"></script>
-    <script src="../../script/fases.js"></script>
 </body>
 </html>
