--- a/personagens/user/18714.html
+++ b/personagens/user/18714.html
@@ -20,7 +20,6 @@
                 <div class="texto">
                     <h2><span id="userName">Usuario</span> chega em corrida doce e recebe uma mensagem de um holograma de Vannellope, pedindo sua ajuda pois está presa na masmoriso, o Rei doce a prendeu lá e ela lhe escolheu para representar ela na corrida, basta você ganhar para que ela seja libertada.</h2>
                     <h3>Quando a mensagem termina o Rei doce e seus capangas se aproximam para tentar te prender para que você não possa correr.</h3>
-                    <p><span id="userName1"></span></p>
                 </div>
                 <div class="btn" onclick="fase1('./29741.html')">E agora?</div>
             </div>
@@ -31,7 +30,7 @@
         </div>
     </div>
     <script src="../../script/user.js"></script>
-    <script src="../../script/usuarioData.js"></script>
+    <script src="../../script/usuarioData1.js"></script>
     <script src="../../script/fases.js"></script>
 </body>
 </html>
